<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gloupproject.gloup.LogInPage"
    android:background="@drawable/log_in_page_bkg">

    <EditText
        android:id="@+id/username_box"
        style="@style/RobotoEditTextStyle"
        android:layout_width="262dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:paddingLeft="8dp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        app:layout_constraintBottom_toTopOf="@+id/password_box"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gloupTitle"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/password_box"
        style="@style/RobotoEditTextStyle"
        android:layout_width="262dp"
        android:layout_height="39dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="130dp"
        android:ems="10"
        android:paddingLeft="8dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gloupTitle"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/donthaveanaccount_btn"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/gloupTitle"
        style="@style/RobotoTextViewStyle"
        android:layout_width="185dp"
        android:layout_height="77dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="60sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="134dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.503" />

    <Button
        android:id="@+id/log_in_btn"
        style="@style/RobotoMainBtnStyle"
        android:layout_width="181dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="60dp"
        android:onClick="login"
        android:text="@string/login_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_box"
        app:layout_constraintVertical_bias="0.037"
        android:orientation="vertical"/>

    <Button
        android:id="@+id/donthaveanaccount_btn"
        style="@style/ClearTextButtonLight"
        android:layout_width="141dp"
        android:layout_height="23dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:onClick="signUp"
        android:text="@string/dont_have_an_account_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_btn"
        app:layout_constraintVertical_bias="0.244" />

    <Button
        android:id="@+id/forgotpassword_btn"
        style="@style/ClearTextButtonLight"
        android:layout_width="93dp"
        android:layout_height="29dp"
        android:text="@string/forgot_password_button"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/log_in_btn"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/password_box"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
