<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gloupproject.gloup.SignUpPage"
    android:background="@drawable/log_in_page_bkg"
    android:orientation="vertical">

    <EditText
        android:id="@+id/username_box"
        style="@style/RobotoEditTextStyle"
        android:layout_width="262dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:paddingLeft="8dp"
        android:hint="@string/email_address_hint"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="false"
        app:layout_constraintBottom_toTopOf="@+id/password_box"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gloupTitle"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/password_box"
        style="@style/RobotoEditTextStyle"
        android:layout_width="262dp"
        android:layout_height="39dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="130dp"
        android:ems="10"
        android:paddingLeft="8dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gloupTitle"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/confirmPassword"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/gloupTitle"
        style="@style/RobotoTextViewStyle"
        android:layout_width="185dp"
        android:layout_height="77dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="60sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="134dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.503" />

    <Button
        android:id="@+id/sign_up_btn"
        style="@style/RobotoMainBtnStyle"
        android:layout_width="181dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="60dp"
        android:onClick="submit"
        android:text="@string/sign_up_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_box"
        app:layout_constraintVertical_bias="0.037" />

    <Button
        android:id="@+id/alreadyhaveanaccount_btn"
        style="@style/ClearTextButtonLight"
        android:layout_width="141dp"
        android:layout_height="23dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:onClick="signIn"
        android:text="@string/alreadyhaveanaccount_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn"
        app:layout_constraintVertical_bias="0.244" />

    <EditText
        android:id="@+id/confirmPassword"
        style="@style/RobotoEditTextStyle"
        android:layout_width="261dp"
        android:layout_height="42dp"
        android:ems="10"
        android:paddingLeft="8dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password_hint"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_btn"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/gloupTitle"
        app:layout_constraintVertical_bias="0.965" />

</android.support.constraint.ConstraintLayout>
